--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,9 @@
   "name": "homepage",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "autoprefixer": "7.1.6",
-    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -39,6 +39,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.0.0",
     "resolve": "1.6.0",
