--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "rxjs": "^6.2.2",
     "semantic-ui-react": "^0.82.1",
     "style-loader": "0.19.0",
+    "svg-sprite-loader": "^3.8.0",    
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
