--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.1",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
@@ -46,7 +47,7 @@
     "rxjs": "^6.2.2",
     "semantic-ui-react": "^0.82.1",
     "style-loader": "0.19.0",
-    "svg-sprite-loader": "^3.8.0",    
+    "svg-sprite-loader": "^3.8.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
