--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
+    "helmet": "^3.13.0",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
