--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "babel server -d build",
     "copyfile": "babel public --out-dir build/public --copy-files",
     "start:dev": "nodemon --watch server --exec \"npm run build && node build/index.js\"",
-    "start": "npm run build && node build/index.js",
-    "heroku-postbuild": "npm install && cd client && npm install && npm run build"
+    "start": "npm install && npm run build && node build/index.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
